# Decentralized-Federated-Learning-Platform

./: README.md  pyproject.toml
dflplatform/: __init__.py  client_app.py  server_app.py  task.py
