# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dflplatform"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.20.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "larrikin-coder"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "dflplatform.server_app:app"
clientapp = "dflplatform.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 0.5
local-epochs = 1


[tool.flwr.clients.client1.node_config]
csv_path = "dflplatform/dataset1.csv"
training_instructions = {epochs=10, lr=0.01, optimizer_type="SGD", optimizer_params={momentum=0.9}}

[tool.flwr.clients.client2.node_config]
csv_path = "dflplatform/dataset2.csv"
training_instructions = {epochs=5, lr=0.005, optimizer_type="Adam", optimizer_params={}}



# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 1
options.num-clients-per-supernode = 2 

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS4
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
